@@ -5,3 +5,31 @@ PA 5 (HS 2020/21)
 
 description comes here.
 
+
+## configuration
+- add extern libraries to java project
+- add modules (refering to the externe libraries) to the java project.
+- build project
+- edit project configuration
+- add: --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml
+
+		--module-path /Users/jeremieequey/Documents/programmation/workspace/c3rbytes/lib/javaFx/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml 
+
+- rebuild project
+- run main.java
+
+if you encounter a problem with javaFx "bad url"
+
+- properties
+- languages and framework
+- shemas and DTSs
+- add "http://javafx.com/"
+
+
+********Password for c3r.c3r file is "password123"***************
+the password was set by a the testclass FileEncrypterDecrypterTest
+
+bootPassword=654321654321
+user and password for the connection to the db -> check DBConnection.java
+
+git debugging: https://dangitgit.com/
